--- a/water-automation/pom.xml
+++ b/water-automation/pom.xml
@@ -24,6 +24,7 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	<!--Spring-->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -36,11 +37,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!--Pi4J-->
 		<dependency>
 			<groupId>com.pi4j</groupId>
 			<artifactId>pi4j-core</artifactId>
 			<version>1.1</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
